# termiHub

./: .gitattributes  .gitignore  .markdownlint.json  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts  vitest.config.ts  wdio.conf.js
.cargo/: audit.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: agent-cleanup.yml  agent.yml  build.yml  code-quality.yml  dev-build.yml  release.yml
agent/: Cargo.toml  Cross.toml  build.rs  install.sh
agent/docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-musleabihf  Dockerfile.x86_64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-musl
agent/src/: main.rs  registry.rs  transport.rs
agent/src/buffer/: ring_buffer.rs
agent/src/daemon/: client.rs  mod.rs  process.rs  protocol.rs
agent/src/docker/: backend.rs
agent/src/files/: docker.rs  local.rs  mod.rs  ssh.rs
agent/src/handler/: dispatch.rs
agent/src/io/: mod.rs  stdio.rs  tcp.rs  transport.rs
agent/src/monitoring/: collector.rs  mod.rs  parser.rs
agent/src/network/: mod.rs
agent/src/protocol/: errors.rs  messages.rs  methods.rs  mod.rs
agent/src/serial/: backend.rs  mod.rs  ring_buffer.rs
agent/src/session/: definitions.rs  manager.rs  mod.rs  types.rs
agent/src/shell/: backend.rs  mod.rs
agent/src/ssh/: backend.rs
agent/src/state/: persistence.rs
agent/systemd/: termihub-agent.service
agent/tests/: docker_integration.rs  local_agent_integration.rs  shell_integration.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  serial.rs
core/src/backends/: local_shell.rs  mod.rs  serial.rs  telnet.rs  wsl.rs
core/src/backends/docker/: file_browser.rs  mod.rs
core/src/backends/ssh/: auth.rs  connector.rs  file_browser.rs  handler.rs  mod.rs  monitoring.rs  x11.rs
core/src/buffer/: mod.rs
core/src/config/: expand.rs  mod.rs
core/src/connection/: mod.rs  registry.rs  schema.rs  validation.rs
core/src/files/: browser.rs  local.rs  mod.rs  utils.rs
core/src/monitoring/: mod.rs  parser.rs  provider.rs  types.rs
core/src/network/: dns.rs  error.rs  mod.rs  ping.rs  port_scan.rs  traceroute.rs  types.rs  wol.rs
core/src/network/open_ports/: mod.rs  unix.rs  windows.rs
core/src/output/: coalescer.rs  mod.rs  screen_clear.rs
core/src/protocol/: errors.rs  messages.rs  mod.rs
core/src/session/: docker.rs  mod.rs  serial.rs  shell.rs  ssh.rs  traits.rs
core/tests/: monitoring.rs  network_resilience.rs  sftp_stress.rs  ssh_advanced.rs  ssh_auth.rs  ssh_banner.rs  ssh_compat.rs  ssh_exec_path.rs  telnet.rs
core/tests/common/: mod.rs
docs/: architecture.md  building.md  contributing.md  manual-testing.md  manual-tests-input.md  performance.md  raspberry-pi.md  release-plan-0.1.0.md  releasing.md  remote-protocol.md  serial-setup.md  ssh-configuration.md  testing.md  user-guide.md
docs/concepts/: README.md  app-icons.md  broadcast-input.md  comprehensive-test-infrastructure.md  cross-platform-testing.md  customize-layout.md  ftp-client.md  guided-manual-testing.md  in-field-update-mechanism.md  light-color-theme.md  linux-persistent-credential-storage.md  macro-recording.md  network-utilities.md  nicer-settings.md  package-manager.md  persistent-connection-ux.md  plugin-system.md  portable-mode.md  prepared-connection-setup.md  rdp-sessions.md  release-planning-and-dependency-management.md  remote-agent-update-strategy.md  rlogin-rsh.md  session-auto-save.md  shared-rust-core.md  shell-context-menu-integration.md  ssh-jump-host.md  ssh-key-passphrase.md  tab-groups.md  terminal-syntax-highlighting.md  unified-test-system.md  vnc-sessions.md  (+2 more)
examples/: README.md
scripts/: README.md  autoformat.sh  build-agents.cmd  build-agents.sh  build.cmd  build.sh  check.cmd  check.sh  clean.cmd  clean.sh  dev.cmd  dev.sh  format.cmd  format.sh  kill-port.cjs  kill-port.js  release-check.cmd  release-check.sh  setup-agent-cross.cmd  setup-agent-cross.sh  setup.cmd  setup.sh  smoke-test.cmd  smoke-test.sh  test-manual.py  test-system-linux.sh  test-system-mac.sh  test-system-windows.cmd  test-system-windows.sh  test-system.cmd  test-system.sh  test.cmd  test.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  connection.rs  credential.rs  embedded_servers.rs  files.rs  logs.rs  mod.rs  monitoring.rs  network.rs  portable.rs  session.rs  terminal.rs  tunnel.rs  update.rs  workspace.rs
src-tauri/src/connection/: config.rs  manager.rs  mod.rs  recovery.rs  settings.rs  storage.rs  tree.rs
src-tauri/src/credential/: auto_lock.rs  crypto.rs  keychain.rs  manager.rs  master_password.rs  mod.rs  null.rs  types.rs
src-tauri/src/embedded_servers/: config.rs  ftp_server.rs  http_server.rs  mod.rs  server_manager.rs  storage.rs  tftp_server.rs
src-tauri/src/files/: local.rs  mod.rs  sftp.rs  utils.rs
src-tauri/src/monitoring/: mod.rs  session.rs
src-tauri/src/network/: http_monitor.rs  mod.rs  wol_storage.rs
src-tauri/src/session/: manager.rs  mod.rs  registry.rs  remote_proxy.rs
src-tauri/src/terminal/: agent_binary.rs  agent_deploy.rs  agent_manager.rs  agent_setup.rs  backend.rs  docker_shell.rs  jsonrpc.rs  local_shell.rs  manager.rs  mod.rs  output_sink.rs  pty_spawner.rs  remote.rs  remote_session.rs  serial.rs  ssh.rs  telnet.rs  x11_forward.rs
src-tauri/src/tunnel/: config.rs  dynamic_forward.rs  local_forward.rs  mod.rs  remote_forward.rs  session_pool.rs  storage.rs  tunnel_manager.rs
src-tauri/src/utils/: docker_detect.rs  errors.rs  expand.rs  log_capture.rs  mod.rs  portable.rs  remote_exec.rs  shell_detect.rs  ssh_auth.rs  ssh_key_convert.rs  ssh_key_validate.rs  version.rs  vscode.rs  x11_detect.rs
src-tauri/src/workspace/: config.rs  manager.rs  mod.rs  storage.rs
(+534 files in other folders)
