[workspace]
members = ["core", "src-tauri", "agent"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
serialport = "4"
ssh2 = { version = "0.9", features = ["openssl-on-win32"] }
ssh-key = { version = "0.6", features = ["encryption", "ed25519", "rsa"] }
openssl = { version = "0.10", features = ["vendored"] }
