[package]
name = "termihub-agent"
version = "0.1.0"
description = "Remote agent for termiHub — manages persistent terminal sessions on Raspberry Pi"
authors = ["Arne Maximilian Richter <armaxri@gmail.com>"]
edition = "2021"

[[bin]]
name = "termihub-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
async-trait = "0.1"
serialport = "4"
ssh2 = "0.9"
shellexpand = "3"
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "term", "poll", "fs"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
