[package]
name = "termihub-agent"
version = "0.1.0"
description = "Remote agent for termiHub — manages persistent terminal sessions on Raspberry Pi"
authors = ["Arne Maximilian Richter <armaxri@gmail.com>"]
edition = "2021"

[[bin]]
name = "termihub-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = { workspace = true }
termihub-core = { path = "../core", features = [
    "local-shell",
    "serial",
    "ssh",
    "telnet",
    "docker",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
async-trait = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
# Used by monitoring/collector.rs (SshCollector) and capability detection.
# Will be removed when monitoring is fully delegated to ConnectionType.
serialport = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
shellexpand = "3"
sysinfo = "0.33"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "term", "poll", "fs"] }
libc = "0.2"


[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
base64 = "0.22"
