[package]
name = "termihub-core"
version = "0.1.0"
description = "Shared core library for termiHub desktop and agent"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "sync"] }
serialport = { workspace = true, optional = true }
portable-pty = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[features]
default = []
serial = ["dep:serialport", "dep:tracing"]
local-shell = ["dep:portable-pty", "dep:tracing"]
telnet = ["dep:tracing"]
