[package]
name = "termihub"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termihub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# default-features = false avoids `common-controls-v6` which embeds a Windows
# app manifest only in binaries (not test executables), causing
# STATUS_ENTRYPOINT_NOT_FOUND (0xc0000139) in `cargo test` on Windows.
# See: https://github.com/tauri-apps/tauri/issues/13419
tauri = { version = "2", default-features = false, features = ["wry", "compression", "dynamic-acl"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
serialport = { workspace = true }
ssh2 = { workspace = true }
ssh-key = { workspace = true }
openssl = { workspace = true }
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
anyhow = "1"
thiserror = { workspace = true }
termihub-core = { path = "../core", features = ["serial", "local-shell", "telnet", "ssh", "wsl"] }
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt"] }
chrono = "0.4"
keyring = "3"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSUserDefaults", "NSString"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[dev-dependencies]
